# vibelint

./: .coverage  .dirfilter  .gitignore  AGENTS.instructions.md  ARCHITECTURAL_ISSUES.md  CLAUDE.md  DEVELOPMENT_METHODOLOGY.md  EmbeddingGemma.md  FOUR_MODEL_INTEGRATION_PLAN.md  HUMAN_DECISION_POINTS.md  LLM_ASSESSMENT_RESULTS.md  MANIFEST.in  MULTI_REPRESENTATION_DESIGN.md  QUALITY_GATES_FRAMEWORK.md  README.md  VIBELINT_WORKFLOWS.md  WORKFLOW_1_REQUIREMENTS.md  codebase_snapshot.md  coverage.xml  fix_emojis.py  fix_imports.py  issues.json  o.md  pyproject.toml  setup.py  test_sample.py  tox.ini  vibelint_issues.json  vibelint_justification_tree.md
.claude/: hooks.json
.github/workflows/: ci.yml
.kaia-guardrails/memory-traces/: memory-trace-20250921-173925.md  memory-trace-20250921-173930.md  memory-trace-20250921-173934.md  memory-trace-20250921-173938.md  memory-trace-20250921-173951.md  memory-trace-20250921-174004.md  memory-trace-20250921-174215.md  memory-trace-20250921-174220.md  memory-trace-20250921-174225.md  memory-trace-20250921-174234.md  memory-trace-20250921-174241.md  memory-trace-20250921-174245.md  memory-trace-20250921-174250.md  memory-trace-20250921-174254.md  memory-trace-20250921-174301.md  memory-trace-20250921-174305.md  memory-trace-20250921-174309.md  memory-trace-20250921-174313.md  memory-trace-20250921-174318.md  memory-trace-20250921-174319.md  memory-trace-20250921-174322.md  memory-trace-20250921-174323.md  memory-trace-20250921-174350.md  memory-trace-20250921-174408.md  memory-trace-20250921-174414.md  memory-trace-20250921-174419.md  memory-trace-20250921-174422.md  memory-trace-20250921-174431.md  memory-trace-20250921-174435.md  memory-trace-20250921-174448.md  memory-trace-20250921-174453.md  memory-trace-20250921-174458.md  memory-trace-20250921-174502.md  memory-trace-20250921-174507.md  memory-trace-20250921-174511.md  memory-trace-20250921-174517.md  memory-trace-20250921-174521.md  memory-trace-20250921-174530.md  memory-trace-20250921-174535.md  memory-trace-20250921-174539.md  (+84 more)
.vibelint-progress/: development-progress.json  pre-tool-analysis-20250921_184223.json  pre-tool-analysis-20250921_184228.json  pre-tool-analysis-20250921_184232.json  pre-tool-analysis-20250921_184237.json  pre-tool-analysis-20250921_184242.json  pre-tool-analysis-20250921_184248.json  pre-tool-analysis-20250921_184253.json  pre-tool-analysis-20250921_184259.json  pre-tool-analysis-20250921_184307.json  pre-tool-analysis-20250921_184419.json
.vibelint-reports/: README.md  example-analysis.json  example-llm-trace.json  example-single-llm-config.toml
.vibelint-self-improvement/: improvement_complex_func_self_improvement.py__analyze_file_for_improvements.json
docs/: CONSOLIDATION_PLAN.md  GPT-OSS.md  JUSTIFICATION_WORKFLOW.md  extending-vibelint.md  print_suppression.md
examples/: pre-commit-config.yaml
o.md/: vibelint_report_20250411_083401.md
reports/: vibelint_report_20250411_085130.md
requirements/: WORKFLOW_1_SINGLE_FILE_VALIDATION.md
src/vibelint/: __init__.py  __main__.py  agent_prompts.py  analysis_engine.py  analysis_orchestrator.py  api.py  archive.py  ascii.py  ast_utils.py  auto_discovery.py  builtin_validators.py  cli.py  config.py  console_utils.py  context_probing.py  core.py  coverage_analysis.py  dependency_graph_manager.py  diagnostics.py  discovery.py  distributed_coordinator.py  embedding_client.py  error_codes.py  filesystem.py  fix.py  formatters.py  justification.py  lint.py  llm.py  llm_client.py  llm_manager.py  llm_orchestrator.py  llm_retry.py  multi_representation_analyzer.py  multitool_safeguards.py  namespace.py  plugin_runner.py  plugin_system.py  project_map.py  report.py  (+15 more)
src/vibelint/cli/: __init__.py  ai.py  analysis.py  cli_group.py  core.py  maintenance.py  registry.py  validation.py
src/vibelint/context/: __init__.py  analyzer.py  prompts.py
src/vibelint/llm/: __init__.py  llm_config.py  llm_context_engineer.py  llm_orchestrator.py  manager.py
src/vibelint/reporting/: __init__.py  generator.py
src/vibelint/tests/: __init__.py  test_docstring.py  test_encoding.py
src/vibelint/validators/: __init__.py  api_consistency.py  architecture.py  code_smells.py  dead_code.py  docstring.py  emoji.py  encoding.py  exports.py  logger_names.py  module_cohesion.py  namespace_collisions.py  namespace_report.py  orphaned_scripts.py  print_statements.py  registry.py  shebang.py  types.py  typing_quality.py
src/vibelint/validators/architecture/: __init__.py  basic_patterns.py  fallback_patterns.py  intelligent_llm_analysis.py  llm_analysis.py  semantic_similarity.py
src/vibelint/validators/project_wide/: __init__.py  api_consistency.py  code_smells.py  dead_code.py  module_cohesion.py  namespace_collisions.py  namespace_report.py
src/vibelint/validators/single_file/: __init__.py  absolute_imports.py  config_no_fallback.py  dict_antipattern.py  dict_get_fallback.py  docstring.py  emoji.py  exports.py  (+7 more)
src/vibelint/workflow/: __init__.py  evaluation.py  manager.py  orchestrator.py  registry.py
src/vibelint/workflows/: __init__.py  base.py  cleanup.py  coverage_analysis.py  evaluation.py  justification.py  justification_analysis.py  manager.py  orchestrator.py  redundancy_detection.py  registry.py
tests/: __init__.py  conftest.py  test_claude_validators.py  test_cli.py  test_config.py  test_docstring.py  test_emoji_removal_safety.py  test_filesystem.py  test_fix_functionality.py  test_fix_integration.py  test_llm_client.py  test_plugin_system.py  test_print_suppression.py  test_rules.py  test_shebang.py  test_validation_engine.py  test_validators.py
tests/helpers/: __init__.py  cli_assertions.py  pyproject_utils.py
tests/integration/: __init__.py
tests/integration/cli/: test_cli.py
tests/live/: README.md  __init__.py  test_structured_output.py
tests/unit/: __init__.py  test_fix_functionality.py  test_structured_output.py
tests/unit/plugins/: __init__.py
tests/unit/validators/: __init__.py
tools/: gate.py
validators/: __init__.py
vibelint_reports/: example_report.md
workflows/: ci.yml
(+24 files in other folders)
