[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vibelint"
version = "0.1.2"
description = "Suite of tools to enhance the vibe coding process."
authors = [
  { name = "Mithran Mohanraj", email = "mithran.mohanraj@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w",
    "colorama>=0.4.0",
    "rich>=12.0.0",
    "libcst",
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0"
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=2.2.0",
    "torch>=1.9.0",
    "numpy>=1.21.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0"
]

[project.scripts]
vibelint = "vibelint.cli:main"

[project.entry-points."vibelint.validators"]
# Built-in validators - organized by type
# Single-file validators (analyze individual files in isolation)
"DOCSTRING-MISSING" = "vibelint.validators.single_file.docstring:MissingDocstringValidator"
"DOCSTRING-PATH-REFERENCE" = "vibelint.validators.single_file.docstring:DocstringPathValidator"
"EXPORTS-MISSING-ALL" = "vibelint.validators.single_file.exports:MissingAllValidator"
"EXPORTS-MISSING-ALL-INIT" = "vibelint.validators.single_file.exports:InitAllValidator"
"PRINT-STATEMENT" = "vibelint.validators.single_file.print_statements:PrintStatementValidator"
"EMOJI-IN-STRING" = "vibelint.validators.single_file.emoji:EmojiUsageValidator"
"LOGGER-NAME" = "vibelint.validators.single_file.logger_names:LoggerNameValidator"
"TYPING-POOR-PRACTICE" = "vibelint.validators.single_file.typing_quality:TypingQualityValidator"
"VIBELINT-SELF-VALIDATION" = "vibelint.validators.single_file.self_validation:VibelintSelfValidator"
"FILE-TOO-LONG" = "vibelint.validators.single_file.line_count:LineCountValidator"

# Project-wide validators (require knowledge of entire project)
"DEAD-CODE-FOUND" = "vibelint.validators.project_wide.dead_code:DeadCodeValidator"
"API-CONSISTENCY" = "vibelint.validators.project_wide.api_consistency:APIConsistencyValidator"
"CODE-SMELLS" = "vibelint.validators.project_wide.code_smells:CodeSmellValidator"
"MODULE-COHESION" = "vibelint.validators.project_wide.module_cohesion:ModuleCohesionValidator"

# Architecture validators (specialized project-wide analysis)
"ARCHITECTURE-INCONSISTENT" = "vibelint.validators.architecture.basic_patterns:ArchitectureValidator"
"ARCHITECTURE-LLM" = "vibelint.validators.architecture.llm_analysis:LLMAnalysisValidator"
"SEMANTIC-SIMILARITY" = "vibelint.validators.architecture.semantic_similarity:SemanticSimilarityValidator"
"FALLBACK-SILENT-FAILURE" = "vibelint.validators.architecture.fallback_patterns:FallbackAnalyzer"

# Third-party validators can be added here by other packages:
# Example:
# "MY-CUSTOM-RULE" = "my_package.validators:MyCustomValidator"


[project.entry-points."vibelint.formatters"]
human = "vibelint.reporting:HumanFormatter"
natural = "vibelint.reporting:NaturalLanguageFormatter"
json = "vibelint.reporting:JsonFormatter"
sarif = "vibelint.reporting:SarifFormatter"
llm = "vibelint.reporting:LLMFormatter"

[project.entry-points."vibelint.workflows"]
# Built-in workflows are auto-discovered from vibelint.workflows package
# Users can add custom workflows here:
# my-custom-workflow = "my_package.workflows:MyCustomWorkflow"

[project.urls]
"Homepage" = "https://github.com/mithranm/vibelint"
"Bug Tracker" = "https://github.com/mithranm/vibelint/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vibelint*"]

[tool.vibelint]
# Simple configuration - most users just need this
include_globs = ["src/**/*.py", "tests/**/*.py"]
exclude_globs = ["tests/fixtures/*"]

# Report configuration
reports_dir = ".vibelint-reports"  # Directory for detailed analysis reports (gitignored)
llm_trace_logs = true              # Log complete LLM workflow traces for debugging/auditing

# Organized report subdirectories
[tool.vibelint.reports]
output_dir = ".vibelint-reports"
justification_dir = ".vibelint-reports/justification/current"
workflow_dir = ".vibelint-reports/workflow/current"
analysis_dir = ".vibelint-reports/analysis/current"
auto_archive_days = 7  # Move reports older than N days to archived/ subdirectories

# Rule severity levels: "OFF", "INFO", "WARN", "BLOCK"
[tool.vibelint.rules]
"PRINT-STATEMENT" = "WARN"
"EMOJI-IN-STRING" = "WARN"
"DEAD-CODE-FOUND" = "INFO"
"ARCHITECTURE-LLM" = "WARN"

# Docstring configuration
[tool.vibelint.docstring]
require_path_references = false         # Set to true to require filepath at end of docstrings
require_module_docstrings = true        # Require module-level docstrings
require_class_docstrings = true         # Require class docstrings
require_function_docstrings = false     # Require function docstrings (can be noisy)
path_reference_format = "relative"      # Options: "relative", "absolute", "module_path"
include_private_functions = false       # Check docstrings for _private functions

# LLM configuration - generic template (projects should override in their pyproject.toml)
[tool.vibelint.llm]
# Example configuration - projects should customize these values
# fast_api_url = "https://your-llm-endpoint.com"
# fast_model = "your-model-name"
# fast_temperature = 0.1
# fast_max_tokens = 2048
# remove_thinking_tokens = true
# thinking_format = "harmony"  # Options: "harmony", "qwen", "custom"

# Embedding configuration - generic template
[tool.vibelint.embeddings]
# Example configuration - projects should customize for their embedding providers
# code_api_url = "https://your-embedding-endpoint.com"
# code_model = "your-embedding-model"
# code_dimensions = 768
# use_specialized_embeddings = false  # Set to true when endpoints are configured
similarity_threshold = 0.85  # Threshold for similarity detection

# Vector database configuration - generic template
[tool.vibelint.vector_store]
# Backend options: "memory", "qdrant", "vectorize", "pinecone"
backend = "memory"  # Default to in-memory for simplicity (projects should configure proper backends)

# Example configurations for different backends (projects should uncomment and configure):
# cache_size = 10000  # For memory backend
# qdrant_url = "http://localhost:6333"  # For Qdrant
# chroma_path = ".vibelint-cache/chroma"  # For Chroma
# similarity_metric = "cosine"  # "cosine", "euclidean", "dot"

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length=100

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv"
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Allow function calls in argument defaults
    "B904",   # Allow raise without from for now
    "UP036",  # Allow outdated version blocks
    "C414",   # Allow unnecessary list() calls for clarity
    "SIM102", # Allow nested if statements
    "SIM210", # Allow if-else instead of bool()
    "SIM113", # Allow manual index tracking
    "SIM103", # Allow explicit return True/False
    "N802",   # Allow uppercase function names (LibCST visitor methods)
    "N806",   # Allow uppercase variables
    "B006",   # Allow mutable defaults for now
    "B007",   # Allow unused loop variables
    "UP007",  # Allow Union syntax for now
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # Allow unused imports in tests

[tool.setuptools.package-data]
vibelint = ["VIBECHECKER.txt"]